<resources>
    <string name="app_name">Travel\nBuddy</string>
    <string name="title_section1">Travel Tip</string>
    <string name="title_section2">Hotel</string>
    <string name="title_section3">Tourist Attraction</string>
    <string name="title_section4">Transportation</string>
    <string name="title_section5">Event News</string>
    <string name="title_section6">Emergency Contacts</string>
    <string name="title_section7">General Information</string>
    <string name="title_section8">Map</string>
    <string name="title_trvltp1">Entry Requirement</string>
    <string name="title_trvltp2">Air/Road conncetions to Nepal</string>
    <string name="title_trvltp3">Accomodation </string>
    <string name="title_trvltp4">Communication</string>
    <string name="title_trvltp5">Permits and fees</string>
    <string name="title_trvltp6">Health guide</string>
    <string name="title_trvltp7">Cultural etiquette"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example"></string>
    <string name="action_settings">Settings</string>
    <string name="EntryRequirement">
        Visa can be obtained on arrival at the Tribhuvan International Airport, Kathmandu, at border
        entry pointsin Kakadvitta, Birgunj, Bhairahawa, Nepalgunj, Gaddachowkion Nepal-India border and Kodari on Nepal-China border.
        Visa can also be obtained at the nearest Nepal Embassy or Diplomatic Mission. Visa can also be obtained (renewal purposes) at
        Department of Immigration, Kalikasthan, Kathmandu.A valid passport and one passport -size photo with a light background is
        required. Immigration Department has not specified the size of the passport-size photo.Visa can be obtained only through
        payment of cash in the following currency:Euro, Swiss Franc, Pound Sterling, US Dollar, Australian Dollar, Canadian Dollar,
        Hong Kong Dollar, Singapore Dollar and Japanese Yen.Credit card, Indian currency and Nepali currency are not accepted as
        payment of visa fee.
    </string>
    <string name="Accomodation"><p>Nepal has every category of accommodation facilities that range from international standard star hotels to budget hotels and lodges. To ensure quality service, it is advisable to use the facilities and services of Government registered hotels, lodges and homestays. Most hotels offer a choice: bed and breakfast; bed, breakfast and one other meal; or room and full board. During spring and fall,
    hotels work at near full capacity and are booked well in advance.Therefore, it would be a good idea to check well in advance and book hotels as per need if traveling to Nepal in the
    peak season. Moderate accommodation facilities are also available in some parts of Kathmandu like Thamel. In such cases,
    room rates may not include toilets and showers, unless otherwise indicated. Toilets and showers in such cases are generally
    communal and heating may require additional charges. Such small hostelries are preferred by budget tourists and FITs.
    Accommodation facilities are available in the mountain tourist areas. While trekking to some areas tenting may be the only
    alternative if resident villages are scanty and long way off trekking routes. However, most trekking routes have lodges or
    tea houses to accommodate tourists. Still to be on the safer side, we recommend that tourists look up on such information
    before embarking on their journey.</p></string>
     <string name="Connection"><b>Air Connection</b>\n
    Nepal Airlines is the national flag carrier of Nepal with flights to/ from Delhi, Kuala Lumpur, Dubai, Bangkok, Doha and Hong Kong.
         Other International airlines operating from and to Kathmandu are Air Arabia (Sharjah), Air Asia (Kuala Lumpur), Air China
         (Lhasa, Chengdu), Biman Bangladesh (Dhaka), China Eastern Airlines (Kunming), China Southern Airlines (Guangzhou), Dragon
         Air (Hong Kong), Druk Air (Delhi, Paro), Etihad Airways (Abu Dhabi), Flydubai (Dubai), GMG Airlines (Dhaka), Indian Airlines
         (Delhi, Kolkata, Varanasi), Indigo Airlines (Delhi), Jet Airways (Delhi, Mumbai), Jet Lite (Delhi), Korean Air (Seoul),
         Malaysian Airlines (Kuala Lumpur), Pakistan International Airlines (Karachi, Islamabad), Qatar Airways (Doha), RAK Air
         (Ras al- Khaimah), Silk Air (Singapore), Spicejet (Delhi), Thai Airways (Bangkok)and United Airways (Dhaka).\n \n
         <b>Traveling by Road</b>\n All visitors entering Nepal by land must use these designated entry points and may not enter
         from any other point:\n(1) Kakkarvitta\n(2) Birgunj\n(3) Belhiya, Bhairahawa\n(4) Nepalgunj \n(5) Dhangadi and \n(6)
         Mahendranagar in the Nepal-India border and \n(7) Kodari in the Nepal-China border. </string>
        <string name="title_activity_permits_activity">Permits and fees</string>
    <string name="Cultural_Etiquette">Some tips on the common etiquettes practiced by Nepali people should be useful to visitors.\n
        1.	The form of greeting in Nepal is “Namaste” performing by joining both palms together. It literally means “the divine in me
        salutes the divine in you”.\n 2.	As a mark of respect Nepalis usually take their shoes off before entering someone’s house or
        place of worship.\n 3.	Food or material that has been touched by another person’s mouth is considered impure or “jutho” and,
        therefore, is not accepted unless among close friends or family.\n 4.	Touching something with feet or using the left hand
        to give or take may not be considered auspicious.\n 5.	Women wearing skimpy outfits are frowned upon especially in the rural
        parts of the country.\n 6.	As a part of the tradition some Hindu temples do not allow non Hindus to enter.\n 7.	Leather
        articles are prohibited inside some temple areas.\n 8.	Walking around temples or stupas is traditionally done clockwise.\n
        9.	To avoid conflict photography is carried out after receiving permission from the object or person.\n 10.	Public
        displays of affection are considered scandalous.\n</string>
    <string name="Communication"><b>Telephone Services:</b>\n
Landline and mobile phone services are available in Nepal. Network covers Kathmandu, major cities and towns and most of Nepal, except some rural Himalayan places. Nepal Telecommunications Corporation at Tripureshwor, Kathmandu, is the national service provider. There are also private service providers. Hotels and private communication centers also provide long distance telephone and fax facilities.\n
    For calling from outside, country code for Nepal is 977 and the area code for Kathmandu is 1. For other city codes are:
    To call Nepal from other countries:\n
    00 + country code (977) + city code + telephone number\n</string>
    <string name="Health_guide"><p>No specific vaccinations are needed to enter Nepal, but visitors should ensure they are vaccinated
        against hepatitis A and B, typhoid fever, rabies and Japanese encephalitis. Meningitis A/C shows up frequently during the
        winter months. If you are travelling through the Terai region, malaria is a concern during the monsoon season. Be careful to
        avoid getting bitten by mosquitoes at dawn and dusk. Wear long pants, socks and shoes and sleep under a mosquito net whenever
        possible.The most common illness suffered by travellers to Nepal is a stomach ache due to consuming contaminated food or water. Never drink water or ice if you aren’t sure it has been purified. Bottled water is available everywhere. Many visitors choose to avoid eating dairy products or unpeeled fruit. Meat is fine as long as it’s been thoroughly cooked. Washing your hands often is another good precaution while travelling around Nepal.</p></string>
        <string name="title_activity_accomodation">Accomodation</string>
        <string name="title_activity_connection">Air Connection</string>
    <string name="fourstar"><b>Four Star Hotels\t(****)</b></string>
    <string name="star"><b>Five Star Hotels\t(*****)</b></string>
    <string name="htl1">1.\t Hyatt Regency , Boudha KTM</string>
    <string name="htl2">2.\t Soaltee Crown Plaza, Tahachal KTM</string>
    <string name="htl3">3.\t Hotel Annapurna,Durbar Marg KTM</string>
    <string name="htl4">4.\t Radisson Hotel, Lazimpat KTM</string>
    <string name="htlsh">2.\t Shangri-La Hotel,Lazimpat KTM </string>
    <string name="htl5">5.\t Yak and Yeti Hotel,Durbar Marg KTM</string>
    <string name="htl6">6.\t The Malla Hotel,Thamel KTM</string>
    <string name="htl7">1.\t Hotel Shankar,Lazimpat Ktm</string>
    <string name="htl8">3.\t Hotel Vaishali,Thamel Ktm</string>
    <string name="htl9">4.\t Hotel Himalaya,Kupandole Lalitpur</string>
    <string name="threestar"><b>Three Star Hotels\t(***)</b></string>
    <string name="ts1">1.\tShambling Hotel,Lazimpat KTM</string>
    <string name="ts2">2.\tSamsara Resort,Thamel Ktm</string>
    <string name="ts3">3.\tKathmandu Guest House,Ktm</string>
    <string name="guesthouse"><b>Guest House \t(*)</b></string>
    <string name="gh1">1.\t Red Planet Guest House</string>
    <string name="emergency">•	Dial 100 to get immediate assistance from the Police and for tourist police dial 4700750 (Thamel Tourists Police)\n
•	Dial 4228094 while in Kathmandu or other Ambulance service numbers listed below. At the same time, seek help from nearby people and traffic police for alternative assistance as Emergency Response is much longer than expected.\n
•	103 for Fire Fighters \n
        •Country code is :977\n
        •Kathmandu valley code : 01\n\n
    </string>
    <string name="embassy">Embassy</string>
    <string name="embassy1">Autralian Embassy</string>
    <string name="embassy2">Indian Embassy</string>
    <string name="embassy3">Japan Embassy</string>
    <string name="embassy4">Thai Embassy</string>
    <string name="embassy5">UK Embassy</string>
    <string name="embassy6">US Embassy</string>
    <string name="embassy7">Norwegian Embassy</string>
    <string name="location">Location</string>
    <string name="location1">Bansbari</string>
    <string name="location2">Lainchaur</string>
    <string name="location3">PaniPokhari</string>
    <string name="location4">Bansbari</string>
    <string name="location5">Lainchaur</string>
    <string name="location6">PaniPokhari</string>
    <string name="location7">Bakhundole</string>
    <string name="phone">Phone No.</string>
    <string name="phone1">01-4371678</string>
    <string name="phone2">01-4410900</string>
    <string name="phone3">01-4426680</string>
    <string name="phone4">01-4374110</string>
    <string name="phone5">01-4411590</string>
    <string name="phone6">01-4411179</string>
    <string name="phone7">01-5545307</string>
    <string name="festival"><b>Festivals</b></string>
    <string name="event">Event</string>
<string name="month">Month</string>
    <string name="eventfestival1">Loshar</string>
    <string name="month1">January/February</string>
    <string name="loctnev1">Boudhanath\nNationwide</string>
    <string name="eventfestival2">Shivratri</string>
    <string name="month2">February</string>
    <string name="loctnev2">Pashupatinath</string>
    <string name="eventfestival3">Holi</string>
    <string name="month3">March</string>
    <string name="loctnev3">Nationwide</string>
    <string name="otherevents"><b>Other Events</b></string>
    <string name="foodbeverage"><u>Food Beverage and Hospitality</u></string>
    <string name="fooddate">• Date:24-27Sep2015 \n• Location:Bhrikutimandap- Exhibition hall</string>
    <string name="icctns"><u>International Conference on Computing\nTechnology and Networking System</u></string>
    <string name="icdate">• Date:10-11 Oct2015\n• Hotel Radission Kathmandu Nepal</string>
</resources>