<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EmergencyContactFragment">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView android:text="@string/emergency" android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:textColor="#0f0e0e"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">
            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="1">
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/embassy"
                android:padding="3dip"
                android:textColor="#0f016e"
                android:textSize="16dp"/>
            <TextView
                android:layout_column="2"
                android:text="@string/location"
                android:gravity="center"
                android:padding="3dip"
                android:textColor="#0f016e"
                android:textSize="16dp"/>
            <TextView
                android:text="@string/phone"
                android:gravity="right"
                android:padding="3dip"
                android:textColor="#0f016e"
                android:textSize="16dp"
                />
        </TableRow>
        <View
            android:layout_height="2dip"
            android:background="#d41243"/>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/embassy1"
                android:padding="3dip"
                android:textColor="#0f0e0e"/>
            <TextView
                android:layout_column="2"
                android:text="@string/location1"
                android:gravity="center"
                android:padding="3dip"
                android:textColor="#0f0e0e"/>
            <TextView
                android:text="@string/phone1"
                android:gravity="right"
                android:padding="3dip"
                android:textColor="#0f0e0e"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/embassy2"
                android:padding="3dip"
                android:textColor="#0f0e0e"/>
            <TextView
                android:layout_column="2"
                android:text="@string/location2"
                android:gravity="center"
                android:padding="3dip"
                android:textColor="#0f0e0e"/>
            <TextView
                android:text="@string/phone2"
                android:gravity="right"
                android:padding="3dip"
                android:textColor="#0f0e0e"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/embassy3"
                android:padding="3dip"
                android:textColor="#0f0e0e"
                />
            <TextView
                android:layout_column="2"
                android:text="@string/location3"
                android:gravity="center"
                android:textColor="#0f0e0e"
                android:padding="3dip"/>
            <TextView
                android:text="@string/phone3"
                android:gravity="right"
                android:padding="3dip"
                android:textColor="#0f0e0e"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/embassy4"
                android:textColor="#0f0e0e"
                android:padding="3dip"/>
            <TextView
                android:layout_column="2"
                android:text="@string/location4"
                android:gravity="center"
                android:textColor="#0f0e0e"
                android:padding="3dip"/>
            <TextView
                android:text="@string/phone4"
                android:gravity="right"
                android:padding="3dip"
                android:textColor="#0f0e0e"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/embassy5"
                android:padding="3dip"
                android:textColor="#0f0e0e"/>
            <TextView
                android:layout_column="2"
                android:text="@string/location5"
                android:gravity="center"
                android:textColor="#0f0e0e"
                android:padding="3dip"/>
            <TextView
                android:text="@string/phone5"
                android:gravity="right"
                android:padding="3dip"
                android:textColor="#0f0e0e"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/embassy6"
                android:padding="3dip"
                android:textColor="#0f0e0e"/>
            <TextView
                android:layout_column="2"
                android:text="@string/location6"
                android:gravity="center"
                android:textColor="#0f0e0e"
                android:padding="3dip"/>
            <TextView
                android:text="@string/phone6"
                android:gravity="right"
                android:textColor="#0f0e0e"
                android:padding="3dip"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/embassy7"
                android:padding="3dip"
                android:textColor="#0f0e0e"/>
            <TextView
                android:layout_column="2"
                android:text="@string/location7"
                android:gravity="center"
                android:textColor="#0f0e0e"
                android:padding="3dip"/>
            <TextView
                android:text="@string/phone7"
                android:gravity="right"
                android:padding="3dip"
                android:textColor="#0f0e0e"/>

        </TableRow>
    </TableLayout>
        </LinearLayout></ScrollView>


    </LinearLayout>

</RelativeLayout>